clusters/local/apps/smart-rest/namespace.patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-rest-prod
  labels:
    environment: local
