clusters/local/apps/smart-rest/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-rest-nginx
  annotations:
    cert-manager.io/cluster-issuer: null
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  tls: null
  rules:
    - host: smart-rest.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-rest-nginx
                port:
                  name: http
